syntax = "proto3";
package message;

option go_package = "pkg/pb";


message Handshake {
    string os = 1;
    string version = 2;

    enum TunnelType {
        CONTROL = 0;
        DATA = 1;
    }

    TunnelType tunnel_type = 3;

    string client_id = 4;
}

message HandshakeReply {    
    string error = 1;
    string data_server_addr = 2;
    string client_id = 3;
}

message Heartbeat {

}

message RequestDataTunnel {
    int32 number = 1;
}

message StartForward {
    string client_remote_addr = 1;
}

message StartForwardReply {
    string error = 1;
}

message Message {
    enum MessageType {
        HANDSHAKE = 0;
        HANDSHAKE_REPLY = 1;
        HEARTBEAT = 2;
        REQ_DATA_TUNNEL = 3;
        START_FORWARD = 4;
        START_FORWARD_REPLY = 5;
    }

    MessageType type = 1;

    oneof data {
        Handshake handshake = 2;
        HandshakeReply handshake_reply = 3;
        Heartbeat heartbeat = 4;
        RequestDataTunnel req_data_tunnel = 5;
        StartForward start_forward = 6;
        StartForwardReply start_forward_reply = 7;
    }
}